--- a/artists.html
+++ b/artists.html
@@ -31,6 +31,14 @@
             <p class="review-link">Ratings: <a href="artists/travis.html">Travis Scott</a></p>
         </div>
     </div>
+    <div class="artist-container">
+        <div><img class="artist-img" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Don_Toliver_2017.png"></div>   
+        <div class="artist-summary">
+            <h1 class="artist-name">Don Toliver</h1>
+            <p class="artist-desc">Don Toliver is an American rapper, singer, and songwriter. Renowned for his R&B melodic vocals, mixed with heavy trap style beats, and a smooth hip-hop flow which make for a solid artist. His range in terms of genre, lyrics, production, and vocals has propelled him to the mainstream, with much success.</p>
+            <p class="review-link">Ratings: <a href="artists/toliver.html">Don Toliver</a></p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
