--- a/artists/kanye.html
+++ b/artists/kanye.html
@@ -44,9 +44,17 @@
         <div class="artist-summary">
             <h1 class="artist-name">808s and Heartbreak</h1>
             <p class="album-desc">The electronic over-autotuned feel on this project, mesmerizing production, and artistic lyrics representing his emotions at the time of the work, make this project an absolutely amazing album. Most of the tracks are meaningful, sound great, and fit the theme, which is what a lot of his early work does extremely well. Additionally, this album is debatably his most influential work, building the way for more hip-hop R&B blends, and emo music as a whole. The extremely emotive songs such as Say You Will, Heartless, Amazing, Love Lockdown, and Paranoid, make for an emotional joyride.</p>
-            <p class="review-link greats">Ranking: 🤩The Greats</p>
+            <p class="review-link s-tier">Ranking: S Tier</p>
+        </div>
+    </div>
+    <div class="artist-container" id="mbdtf">
+        <div><img class="artist-img" src="https://www.normanrecords.com/artwork/small/244/166244-kanye-west-my-beautiful-dark-twisted-fantasy.jpg"></div>   
+        <div class="artist-summary">
+            <h1 class="artist-name">My Beautiful Dark Twisted Fantasy</h1>
+            <p class="album-desc">The overall theme is just one of fame, success, and power. The introspective into Kanye is of a level that we haven't seen, the analysis into his life and how he has progressed. The tracks sound amazing, which show how much time has been put into it and the evolution of his sound. The features, samples, and production are some of the best of all time. The album does tend to drop in quality with the second half. With all-time greats like Gorgeous, POWER, All Of The Lights, Devil In A New Dress, and Runaway, this album is sure to be remembered.</p>
+            <p class="review-link s-tier">Ranking: S Tier</p>
         </div>
     </div>
     <script src="../script.js"></script>
 </body>
-</html>
+</html>/
