--- a/artists/travis.html
+++ b/artists/travis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Kanye West</title>
+    <title>Travis Scott</title>
 </head>
 <body>
     <ul>
@@ -15,13 +15,22 @@
         <li><a href="../info.html">Info</a></li>
     </ul>
     <h1 class="title"><u>Travis Scott</u></h1>
-    <div class="artist-container" id="tcd">
+    <div class="artist-container" id="rodeo">
         <div><img class="artist-img" src="https://upload.wikimedia.org/wikipedia/en/7/7b/Rodeo_-_Album_Cover_by_Travis_Scott%2C_September_4%2C_2015.jpg"></div>   
         <div class="artist-summary">
             <h1 class="artist-name">Rodeo</h1>
-            <p class="album-desc">Album Description here</p>
-            <p class="review-link">Ranking:</p>
+            <p class="album-desc">A mix of traditional heavy trap, creative production with solid beats, a bit of introspective into Travis himself, and beautiful melodic flow, make for a killer album. I believe this album stands out by Travis as one that didn't have heavy mainstream influence, and was fairly groundbreaking for the time. My favourite songs have gotta be ones that explore a deeper meaning with smooth Travis vocals to back up the lyricism, such as Pornography, 90210, Nightcrawler, Antidote, Impossible, I Can Tell, and Apple Pie.</p>
+            <p class="review-link a-tier">Ranking: A Tier</p>
         </div>
-    <script src="script.js"></script>
+    </div>
+    <div class="artist-container" id="birds">
+        <div><img class="artist-img" src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"></div>   
+        <div class="artist-summary">
+            <h1 class="artist-name" id="long-title">Birds In The Trap Sing By McKnight</h1>
+            <p class="album-desc">Clean</p>
+            <p class="review-link a-tier">Ranking: A Tier</p>
+        </div>
+    </div>
+    <script src="../script.js"></script>
 </body>
 </html>
