--- a/info.html
+++ b/info.html
@@ -15,5 +15,8 @@
         <li><a href="info.html">Info</a></li>
     </ul>
     <h1 class="title">📋<u>Info</u></h1>
+    <p class="info-text">I use tiers cause I think ratings out of 10 are stupid as you could really like an album, but objectively it's not on par with another album that is an all time classic, so I go solely based on how I enjoy listening.</p>
+    <p class="info-text">The albums are not ranked within the tiers, because I'm lazy, but I do prefer certain albums in a tier to other albums in that tier.</p>
+    <p class="info-text">If you disagree with anything I say, cool, do that 👍, and the end of the day, it's just opinion, if you think I've actually gone too far, drop me a message.</p>
 </body>
 </html>
