--- a/ratings.html
+++ b/ratings.html
@@ -45,14 +45,23 @@
         <img class="rating-img" src="https://upload.wikimedia.org/wikipedia/en/7/70/Graduation_%28album%29.jpg">  
         <Graduation class="album"><a href="artists/kanye.html#graduation">Graduation - Kanye West</a></p>
     </div>
-    <div class="rating-container">
-        <img class="rating-img" src="https://images.genius.com/8886db5d63359390f1f3be1f9ba2d2c5.900x900x1.jpg">  
-        <Graduation class="album"><a href="artists/kanye.html#808s">808s and Heartbreak - Kanye West</a></p>
-    </div>
     <p class="head s-tier">S Tier:</p>
     <div class="rating-container">
         <img class="rating-img" src="https://upload.wikimedia.org/wikipedia/en/f/f4/Late_registration_cd_cover.jpg">  
         <p class="album"><a href="artists/kanye.html#lr">Late Registration - Kanye West</a></p>
+    </div>
+    <div class="rating-container">
+        <img class="rating-img" src="https://images.genius.com/8886db5d63359390f1f3be1f9ba2d2c5.900x900x1.jpg">  
+        <Graduation class="album"><a href="artists/kanye.html#808s">808s and Heartbreak - Kanye West</a></p>
+    </div>
+    <div class="rating-container">
+        <img class="rating-img" src="https://www.normanrecords.com/artwork/small/244/166244-kanye-west-my-beautiful-dark-twisted-fantasy.jpg">  
+        <p class="album"><a href="artists/kanye.html#mbdtf">My Beautiful Dark Twisted Fantasy - Kanye West</a></p>
+    </div>
+    <p class="head a-tier">A Tier:</p>
+    <div class="rating-container">
+        <img class="rating-img" src="https://upload.wikimedia.org/wikipedia/en/7/7b/Rodeo_-_Album_Cover_by_Travis_Scott%2C_September_4%2C_2015.jpg">  
+        <p class="album"><a href="artists/travis.html#rodeo">Rodeo - Travis Scott</a></p>
     </div>
 </body>
 </html>
