Fix Rodeo image link

--- a/artists/travis.html
+++ b/artists/travis.html
@@ -16,7 +16,7 @@
     </ul>
     <h1 class="title"><u>Travis Scott</u></h1>
     <div class="artist-container" id="rodeo">
-        <div><img class="artist-img" src="https://upload.wikimedia.org/wikipedia/en/7/7b/Rodeo_-_Album_Cover_by_Travis_Scott%2C_September_4%2C_2015.jpg"></div>   
+        <div><img class="artist-img" src="https://upload.wikimedia.org/wikipedia/en/1/15/Travis_Scott_-_Rodeo.png"></div>   
         <div class="artist-summary">
             <h1 class="artist-name">Rodeo</h1>
             <p class="album-desc">A mix of traditional heavy trap, creative production with solid beats, a bit of introspective into Travis himself, and beautiful melodic flow, make for a killer album. I believe this album stands out by Travis as one that didn't have heavy mainstream influence, and was fairly groundbreaking for the time. My favourite songs have gotta be ones that explore a deeper meaning with smooth Travis vocals to back up the lyricism, such as Pornography, 90210, Nightcrawler, Antidote, Impossible, I Can Tell, and Apple Pie.</p>
